--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "rm -rf build && mkdir build && cd build && cmake .. && cmake --build ."
+  },
+  "bin": {
+    "alien": "./build/alien",
+    "alien-js": "./index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
-    "@alien.sh/repl": "file:../repl",
+    "@alien.sh/repl": "@alien.sh/repl",
+    "@alien.sh/signals": "@alien.sh/signals",
     "bean-parser": "^1.0.7",
     "chalk": "^3.0.0",
     "denque": "^1.4.1",
