--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "rm -rf build && mkdir build && cd build && cmake .. && cmake --build ."
+    "preinstall": "rm -rf build && mkdir build && cd build && cmake .. && cmake --build ."
   },
   "bin": {
     "alien": "./build/alien",
