Added install script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.10)
 project(Alien VERSION 0.0.1)
 add_executable(alien alien.c)
 
+install(TARGETS alien RUNTIME DESTINATION bin)
